--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head> 
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width">
 	<meta name="robots" content="ALL" /> 
 	<link rel="stylesheet" type="text/css" media="screen, projection, tv" href="css/import.css" />
 	<link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
